# luobi-nextype

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  bump-version.sh  release.sh
NextypeAndroid/: .gitignore  README.md  build-and-install.sh  settings.gradle.kts
NextypeAndroid/app/: build.gradle.kts  proguard-rules.pro
NextypeAndroid/app/src/main/: AndroidManifest.xml
NextypeAndroid/app/src/main/res/color/: input_box_stroke_color.xml  input_hint_color.xml  pairing_code_box_stroke.xml  segment_text_color.xml  selector_btn_send_bg.xml  selector_btn_send_content.xml  selector_btn_send_stroke.xml  selector_btn_stroke.xml
NextypeApp/: README.md
NextypeApp/NextypeApp/: AboutView.swift  ConnectionManager.swift  ContentView.swift  DeviceEditView.swift  DeviceIDManager.swift  EmptyStateView.swift  EncryptionManager.swift  Info.plist  MainInputView.swift  NextypeAppApp.swift  PairedMac.swift  PairingCodeView.swift  ScreenDimManager.swift  SettingsView.swift  UsageGuideView.swift
NextypeApp/NextypeApp.xcodeproj/: project.pbxproj
NextypeApp/maestro/: run_all.sh
NextypeApp/maestro/flows/: 01_空状态界面.yaml  02_进入主界面.yaml  03_文字输入与清空.yaml  04_打开关闭设置.yaml  05_设置项切换.yaml  06_下载链接复制.yaml
NextypeMac/: README.md  build.sh  package-lock.json  package.json  release.sh
NextypeMac/src/: index.html  logs.html  onboarding.html  preferences.html  style.css
NextypeMac/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
NextypeMac/src-tauri/capabilities/: default.json
NextypeMac/src-tauri/icons/: icon.icns
NextypeMac/src-tauri/src/: lib.rs  main.rs  state.rs
NextypeMac/src-tauri/src/commands/: clipboard.rs  config.rs  hotkeys.rs  logs.rs  mod.rs  stats.rs  system.rs  windows.rs
NextypeMac/src-tauri/src/services/: clipboard.rs  device_manager.rs  hotkey_manager.rs  mod.rs  native_hotkey.rs  relay_client.rs  tray.rs
NextypeMac/src-tauri/src/utils/: config.rs  logger.rs
NextypeWindows/: .gitignore  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  PROJECT_COMPLETION.md  README.md
NextypeWindows/src/: figma-pc-preferences.html  logs.html  onboarding.html  preferences.html  style.css
NextypeWindows/src-tauri/: Cargo.toml  tauri.conf.json
NextypeWindows/src-tauri/src/: lib.rs  main.rs  state.rs
NextypeWindows/src-tauri/src/commands/: app.rs  clipboard.rs  config.rs  devices.rs  hotkeys.rs  relay.rs  stats.rs  system.rs
NextypeWindows/src-tauri/src/services/: clipboard.rs  hotkey_manager.rs  mod.rs  native_hotkey.rs  relay_client.rs  stats.rs  tray.rs
NextypeWindows/src-tauri/src/utils/: config.rs  logger.rs  mod.rs
docs/: README.md  android-architecture.md  android-prd.md  architecture.md  audit-android.md  audit-ios.md  audit-mac.md  audit-website.md  audit-windows.md  changelog.md  cross-platform-overview.md  encryption-key-improvement.md  ios-architecture.md  ios-prd.md  mac-architecture.md  mac-prd.md  prd.md  relay-server.md  windows-architecture.md  windows-prd.md
relay-server/: README.md  deploy.sh  manage.js  package-lock.json  package.json  server.js  trust_relationships.json
vote/: deploy.sh  package-lock.json  package.json  server.js  votes.json
vote/public/: index.html
vote/public/projects/1/: index.html
vote/public/projects/2/: index.html
vote/public/projects/3/: index.html
vote/public/projects/4/: index.html
vote/public/projects/5/: index.html
website/: README.md  deploy.sh  index.html  privacy.html  robots.txt  sitemap.xml  style.css  terms.html  version.json
(+84 files in other folders)
