[package]
name = "nextype-windows"
version = "2.0.0"
description = "落笔 Nextype - 跨设备剪贴板同步应用 (Windows)"
authors = ["Baozheng"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/bi-boo/luobi-nextype"
homepage = "https://yuanfengai.cn"

[lib]
name = "nextype_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"

# Tauri 插件
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 加密
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
md-5 = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"

# 网络
local-ip-address = "0.6"

# 系统信息
hostname = "0.4"
dirs = "6"

# 二维码
qrcode = "0.14"
image = "0.25"

# 日志
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 工具
once_cell = "1"
parking_lot = "0.12"
tauri-plugin-single-instance = "2.0.0-rc.3"

# Windows 原生 API
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
] }
